--- a/wp-content/themes/beach-holiday/style.css
+++ b/wp-content/themes/beach-holiday/style.css
@@ -1339,3 +1339,63 @@ p + ul {
     width: 15em;
 }
 
+div.text-button {
+    display: inline-block;
+    overflow: hidden;
+
+    /* rounded corners, set to 0 for square corners */
+    border-radius: 10px;
+
+    /* control whitespace around each button */
+    margin: 5px 10px;
+
+    /* control shadow around button */
+    box-shadow: 4px 4px 4px #d3d3d3;
+}
+
+div.text-button:hover {
+    box-shadow: 3px 3px 3px #d3d3d3;
+    -webkit-transition-property: box-shadow; /* Safari */
+    -webkit-transition-duration: .3s; /* Safari */
+    transition-property: box-shadow;
+    transition-duration: .3s;
+}
+
+a.text-container {
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+
+    /* match radius of text-button div */
+    border-radius: 10px;
+
+    /* change the size of the button */
+    padding: 20px 50px;
+
+    /* change button background color */
+    background-color: #70e566;
+
+    /* change button text appearance */
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 2em;
+
+    /* change border appearance */
+    border: 5px solid #999;
+}
+
+a.text-container:hover {
+    /* change button text color on hover */
+    color: #f8f8f8;
+    font-weight: bold;
+}
+
+a.text-container .details {
+    display: block;
+
+    /* change detail text appearance */
+    font-size: .5em;
+    text-transform: none;
+    font-weight: normal;
+}
